--- a/index.html
+++ b/index.html
@@ -5,9 +5,78 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Beepb_io</title>
+    <title>Beepb.io</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <div class="logo">
+                    <a href="#">
+                        <img src="./images/logo.svg" alt="logo">
+                    </a>
+                </div>
 
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__list-item">
+                            <a  class="menu__list-link" href="#">Features</a>
+                        </li>
+
+                        <li class="menu__list-item">
+                            <a  class="menu__list-link" href="#">Benefits</a>
+                        </li>
+
+                        <li class="menu__list-item">
+                            <a  class="menu__list-link" href="#">Plans</a>
+                        </li>
+
+                        <li class="menu__list-item">
+                            <a  class="menu__list-link" href="#">Downloads</a>
+                            <img  class="menu__list-img" src="./images/Shape.svg" alt="drop-down">
+                            <ul class="menu__dropdown">
+                                <li class="menu__dropdown-item">
+                                    <a class="menu__dropdown-link" href="#">download 1</a>
+                                </li>
+                                <li class="menu__dropdown-item">
+                                    <a class="menu__dropdown-link" href="#">download 2</a>
+                                </li>
+                                <li class="menu__dropdown-item">
+                                    <a class="menu__dropdown-link" href="#">download 3</a>
+                                </li>
+
+
+                            </ul>
+                        </li>
+
+                        <li class="menu__list-item">
+                            <a  class="menu__list-link" href="#">Support</a>
+                        </li>
+
+                    </ul>
+
+                </nav>
+
+                <div class="header__button">
+                    <a class="header__button-link" href="#">Get Started</a>
+                </div>
+
+            </div>
+        </div>
+    </header>
+
+
+
+
+
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
