fix some small problems

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
+
                 <div class="logo">
                     <a href="#">
                         <img src="./images/logo.svg" alt="logo">
@@ -41,6 +42,7 @@
                         <li class="menu__list-item">
                             <a  class="menu__list-link" href="#">Downloads</a>
                             <img  class="menu__list-img" src="./images/Shape.svg" alt="drop-down">
+
                             <ul class="menu__dropdown">
                                 <li class="menu__dropdown-item">
                                     <a class="menu__dropdown-link" href="#">download 1</a>
@@ -51,8 +53,6 @@
                                 <li class="menu__dropdown-item">
                                     <a class="menu__dropdown-link" href="#">download 3</a>
                                 </li>
-
-
                             </ul>
                         </li>
 
@@ -60,13 +60,15 @@
                             <a  class="menu__list-link" href="#">Support</a>
                         </li>
 
+                        <li class="menu__list-item">
+                            <div class="header__button">
+                                <a class="header__button-link" href="#">Get Started</a>
+                            </div>
+                        </li>
                     </ul>
-
                 </nav>
 
-                <div class="header__button">
-                    <a class="header__button-link" href="#">Get Started</a>
-                </div>
+
 
             </div>
         </div>
