--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                         <li class="menu__list-item">
                             <a  class="menu__list-link" href="#">Downloads</a>
-                            <img  class="menu__list-img" src="./images/Shape.svg" alt="drop-down">
+                            <img class="menu__list-img" src="images/arrow.svg" alt="drop-down">
 
                             <ul class="menu__dropdown">
                                 <li class="menu__dropdown-item">
@@ -67,12 +67,90 @@
                         </li>
                     </ul>
                 </nav>
-
-
-
             </div>
         </div>
     </header>
+
+
+
+    <section class="intro">
+        <div class="intro__bg">
+            <img class="intro__bg-img" src="images/intro-bg.svg" alt="intro-bg">
+        </div>
+        <div class="container">
+            <div class="intro__inner">
+                <div class="intro__img">
+                    <img class="intro__img-item" src="images/intro-iphone.svg" alt="intro-iphone">
+                </div>
+                <div class="intro__content">
+                    <h2 class="intro__content-title">
+                        Warehouse management Made simple.
+                    </h2>
+                    <p class="intro-content-text">
+                        BeepB lets you take control of your complete ecommerce
+                        warehouse and understand how you’re business is holding up.
+                    </p>
+                    <div class="intro__content-links">
+                        <a class="intro__content-links-download" href="#">Download the app</a>
+                        <a class="intro__content-links-watch" href="#"><img src="images/play.svg" alt="play">
+                            Watch How it Works
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+    <section class="everneed">
+        <div class="container">
+            <div class="everneed__inner">
+                <h2 class="everneed__title">
+                    Everything you’ll ever need.
+                </h2>
+                <div class="everneed__items">
+
+                    <div class="everneed__item">
+                        <div class="everneed__item-img">
+                            <img src="images/shield.svg" alt="shield">
+                        </div>
+                        <h3 class="everneed__item-title">Super Secured</h3>
+                        <p class="everneed__item-text">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed
+                            sapien metus, scelerisque nec pharetra id, tempor a tortor.</p>
+                    </div>
+
+                    <div class="everneed__item">
+                        <div class="everneed__item-img">
+                            <img src="images/chart.svg" alt="shield">
+                        </div>
+                        <h3 class="everneed__item-title">Detailed Analytics</h3>
+                        <p class="everneed__item-text">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed
+                            sapien metus, scelerisque nec pharetra id, tempor a tortor.</p>
+                    </div>
+
+                    <div class="everneed__item">
+                        <div class="everneed__item-img">
+                            <img src="images/box.svg" alt="shield">
+                        </div>
+                        <h3 class="everneed__item-title">For any business</h3>
+                        <p class="everneed__item-text">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed
+                            sapien metus, scelerisque nec pharetra id, tempor a tortor.</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </section>
+
+
 
 
 
