--- a/index.html
+++ b/index.html
@@ -146,8 +146,6 @@
     </section>
 
 
-
-
     <section class="features">
         <div class="features__bg">
             <img class="features__bg-img" src="images/features-bg.svg" alt="features-bg">
@@ -227,6 +225,55 @@
         </div>
 
     </section>
+
+
+    <section class="business">
+        <div class="business__oval business__oval--green">
+            <img src="./images/Oval-green.svg" alt="Oval-green">
+        </div>
+        <div class="business__oval business__oval--black">
+            <img src="./images/Oval-black.svg" alt="Oval-black">
+        </div>
+        <div class="container">
+            <div class="business__inner">
+                <h2 class="business__title">For every kind of Business!</h2>
+                <p class="business__text">Donec facilisis tortor ut augue lacinia, at viverra est semper.</p>
+                <div class="business__items">
+
+                    <div class="business__item">
+                        <div class="business__item-img">
+                            <img src="./images/business-1.svg" alt="Startups">
+                        </div>
+                        <h3 class="business__item-title">Startups</h3>
+                        <p class="business_item-text">In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam</p>
+                    </div>
+
+                    <div class="business__item">
+                        <div class="business__item-img">
+                            <img src="./images/business-2.svg" alt="Startups">
+                        </div>
+                        <h3 class="business__item-title">Retailers</h3>
+                        <p class="business_item-text">In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam</p>
+                    </div>
+
+                    <div class="business__item">
+                        <div class="business__item-img">
+                            <img src="./images/business-3.svg" alt="Startups">
+                        </div>
+                        <h3 class="business__item-title">Individuals</h3>
+                        <p class="business_item-text">In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam</p>
+                    </div>
+
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+
 
 
 
