add 'Learn more' button with styles

--- a/index.html
+++ b/index.html
@@ -263,8 +263,10 @@
                         <h3 class="business__item-title">Individuals</h3>
                         <p class="business_item-text">In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam</p>
                     </div>
+                </div>
 
-
+                <div class="business__link">
+                    <a class="business__link-item" href="#">Learn more</a>
                 </div>
 
             </div>
