add section reviews with slider

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
@@ -268,11 +269,91 @@
                 <div class="business__link">
                     <a class="business__link-item" href="#">Learn more</a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="reviews">
+        <div class="container">
+            <div class="reviews__inner">
+                <h2 class="reviews__title">Our users love the app!</h2>
+                <div class="reviews__slider">
+                    <div class="reviews__slide">
+                        <p class="reviews__slide-text">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor.</p>
+                        <div class="reviews__slide-info">
+                            <div class="reviews__slide-col">
+                                <div class="reviews__slide-img">
+                                    <img src="./images/user.svg" alt="User-picture">
+                                </div>
+                            </div>
+                            <div class="reviews__slide-col">
+                                <h3 class="reviews__slide-author">Kimberly Franklin </h3>
+                                <div class="reviews__slide-rating">
+                                    <img src="images/star.svg" alt="star">
+                                    <img src="images/star.svg" alt="star">
+                                    <img src="images/star.svg" alt="star">
+                                    <img src="images/star-gray.svg" alt="star-gray">
+                                    <img src="images/star-gray.svg" alt="star-gray">
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="reviews__slide">
+                        <p class="reviews__slide-text">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor.</p>
+                        <div class="reviews__slide-info">
+                            <div class="reviews__slide-col">
+                                <div class="reviews__slide-img">
+                                    <img src="./images/user.svg" alt="User-picture">
+                                </div>
+                            </div>
+                            <div class="reviews__slide-col">
+                                <h3 class="reviews__slide-author">Kimberly Franklin </h3>
+                                <div class="reviews__slide-rating">
+                                    <img src="images/star.svg" alt="star">
+                                    <img src="images/star.svg" alt="star">
+                                    <img src="images/star.svg" alt="star">
+                                    <img src="images/star-gray.svg" alt="star-gray">
+                                    <img src="images/star-gray.svg" alt="star-gray">
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="reviews__slide">
+                        <p class="reviews__slide-text">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor.</p>
+                        <div class="reviews__slide-info">
+                            <div class="reviews__slide-col">
+                                <div class="reviews__slide-img">
+                                    <img src="./images/user.svg" alt="User-picture">
+                                </div>
+                            </div>
+                            <div class="reviews__slide-col">
+                                <h3 class="reviews__slide-author">Kimberly Franklin </h3>
+                                <div class="reviews__slide-rating">
+                                    <img src="images/star.svg" alt="star">
+                                    <img src="images/star.svg" alt="star">
+                                    <img src="images/star.svg" alt="star">
+                                    <img src="images/star-gray.svg" alt="star-gray">
+                                    <img src="images/star-gray.svg" alt="star-gray">
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+
 
             </div>
-
         </div>
-
     </section>
 
 
@@ -284,6 +365,9 @@
 
 
 
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="./js/slick.min.js"></script>
     <script src="./js/main.js"></script>
+
 </body>
 </html>
