--- a/index.html
+++ b/index.html
@@ -16,61 +16,65 @@
 
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="header__inner">
+<header class="header">
+    <div class="container">
+        <div class="header__inner">
 
-                <div class="logo">
-                    <a href="#">
-                        <img src="./images/logo.svg" alt="logo">
-                    </a>
-                </div>
+            <div class="logo">
+                <a href="#">
+                    <img src="images/logo.svg" alt="logo">
+                </a>
+            </div>
 
-                <nav class="menu">
-                    <ul class="menu__list">
-                        <li class="menu__list-item">
-                            <a  class="menu__list-link" href="#">Features</a>
-                        </li>
+            <nav class="menu">
+                <ul class="menu__list">
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="#">Features</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="#">Benefits</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="#">Plans</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link">Downloads <img class="menu__list-img" src="images/arrow.svg" alt="chevron-down"></a>
 
-                        <li class="menu__list-item">
-                            <a  class="menu__list-link" href="#">Benefits</a>
-                        </li>
+                        <ul class="menu-dropdown">
+                            <li class="menu-dropdown__item">
+                                <a class="menu-dropdown__link" href="#">download 1</a>
+                            </li>
+                            <li class="menu-dropdown__item">
+                                <a class="menu-dropdown__link" href="#">download 2</a>
+                            </li>
+                            <li class="menu-dropdown__item">
+                                <a class="menu-dropdown__link" href="#">download 3</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="#">Support</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <div class="header__button">
+                            <a class="header__button-link" href="#">
+                                Get Started
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
 
-                        <li class="menu__list-item">
-                            <a  class="menu__list-link" href="#">Plans</a>
-                        </li>
 
-                        <li class="menu__list-item">
-                            <a  class="menu__list-link" href="#">Downloads</a>
-                            <img class="menu__list-img" src="images/arrow.svg" alt="drop-down">
 
-                            <ul class="menu__dropdown">
-                                <li class="menu__dropdown-item">
-                                    <a class="menu__dropdown-link" href="#">download 1</a>
-                                </li>
-                                <li class="menu__dropdown-item">
-                                    <a class="menu__dropdown-link" href="#">download 2</a>
-                                </li>
-                                <li class="menu__dropdown-item">
-                                    <a class="menu__dropdown-link" href="#">download 3</a>
-                                </li>
-                            </ul>
-                        </li>
-
-                        <li class="menu__list-item">
-                            <a  class="menu__list-link" href="#">Support</a>
-                        </li>
-
-                        <li class="menu__list-item">
-                            <div class="header__button">
-                                <a class="header__button-link" href="#">Get Started</a>
-                            </div>
-                        </li>
-                    </ul>
-                </nav>
+            <div class="header__burger">
+                <span class="header__burger-item"></span>
+                <span class="header__burger-item"></span>
+                <span class="header__burger-item"></span>
             </div>
         </div>
-    </header>
+    </div>
+</header>
 
 
     <section class="intro">
@@ -355,6 +359,13 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="footer__bg">
+            <img class="footer__bg-img" src="images/footer-bg.svg" alt="footer-bg">
+        </div>
+
+    </footer>
 
 
 
